add Lable, addScrollBar correct Resize

--- a/Source/UI/UI.vcxproj
+++ b/Source/UI/UI.vcxproj
@@ -147,6 +147,9 @@
     <ClInclude Include="UI.h" />
     <ClInclude Include="Widget.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="arial.ttf" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
