removed logs and other trash files

--- a/Source/Physics/Physics.vcxproj
+++ b/Source/Physics/Physics.vcxproj
@@ -73,6 +73,7 @@
     <IncludePath>$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)Bin\</OutDir>
     <TargetName>$(ProjectName)_d</TargetName>
+    <IntDir>$(SolutionDir)Temp\$(ProjectName)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
