--- a/Source/DebugCommandManagerTest/DebugCommandManagerTest.vcxproj.filters
+++ b/Source/DebugCommandManagerTest/DebugCommandManagerTest.vcxproj.filters
@@ -15,12 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ConfigManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="ConfigManager.cpp">
+    <ClCompile Include="Test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
