fix timer in AnimationTest, fix Release configuration

--- a/Source/ResourcesTest/ResourcesTest.vcxproj.filters
+++ b/Source/ResourcesTest/ResourcesTest.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="project.cpp">
+    <ClCompile Include="ResourceManagerTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
