--- a/Source/DebugConsole/DebugConsole.vcxproj
+++ b/Source/DebugConsole/DebugConsole.vcxproj
@@ -93,7 +93,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Source\DebugCommandManager;$(SolutionDir)SFML\include;$(SolutionDir)Source\Events;$(SolutionDir)Source\Input</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Source\Utility;$(SolutionDir)Source\DebugCommandManager;$(SolutionDir)SFML\include;$(SolutionDir)Source\Events;$(SolutionDir)Source\Input</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)SFML\lib</AdditionalLibraryDirectories>
@@ -141,7 +141,7 @@ xcopy "$(SolutionDir)SFML\bin\sfml-window-d-2.dll" "$(OutDir)\*.*" /F /R /Y /I
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Source\DebugCommandManager;$(SolutionDir)SFML\include;$(SolutionDir)Source\Events;$(SolutionDir)Source\Input</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Source\Utility;$(SolutionDir)Source\DebugCommandManager;$(SolutionDir)SFML\include;$(SolutionDir)Source\Events;$(SolutionDir)Source\Input</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
