--- a/Source/DebugConsoleTest/DebugConsoleTest.vcxproj
+++ b/Source/DebugConsoleTest/DebugConsoleTest.vcxproj
@@ -91,11 +91,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Source\DebugConsole;$(SolutionDir)Source\DebugCommandManager;$(SolutionDir)SFML\include;$(SolutionDir)Source\Events;$(SolutionDir)Source\Input</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Source\Utility;$(SolutionDir)Source\DebugConsole;$(SolutionDir)Source\DebugCommandManager;$(SolutionDir)SFML\include;$(SolutionDir)Source\Events;$(SolutionDir)Source\Input</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)SFML\lib;$(SolutionDir)Bin</AdditionalLibraryDirectories>
-      <AdditionalDependencies>DebugCommandManager_d.lib;sfml-graphics-d.lib;sfml-system-d.lib;sfml-window-d.lib;Input_d.lib;DebugConsole_d.lib;Events_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Utility_d.lib;DebugCommandManager_d.lib;sfml-graphics-d.lib;sfml-system-d.lib;sfml-window-d.lib;Input_d.lib;DebugConsole_d.lib;Events_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -131,13 +131,13 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Source\DebugConsole;$(SolutionDir)Source\DebugCommandManager;$(SolutionDir)SFML\include;$(SolutionDir)Source\Events;$(SolutionDir)Source\Input</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Source\Utility;$(SolutionDir)Source\DebugConsole;$(SolutionDir)Source\DebugCommandManager;$(SolutionDir)SFML\include;$(SolutionDir)Source\Events;$(SolutionDir)Source\Input</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(SolutionDir)SFML\lib;$(SolutionDir)Bin</AdditionalLibraryDirectories>
-      <AdditionalDependencies>DebugCommandManager.lib;sfml-graphics.lib;sfml-system.lib;sfml-window.lib;Input.lib;DebugConsole.lib;Events.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Utility.lib;DebugCommandManager.lib;sfml-graphics.lib;sfml-system.lib;sfml-window.lib;Input.lib;DebugConsole.lib;Events.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
