--- a/Source/Utility/Utility.vcxproj.filters
+++ b/Source/Utility/Utility.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClInclude Include="Logger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LoggerMessageEvent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Logger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LoggerMessageEvent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
